--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -13,7 +13,7 @@
 	<artifactId>dsmovie</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>dsmovie</name>
-	<description>Projeto criado na semana Spring react</description>
+	<description>Projeto Criado na semana Spring React</description>
 	<properties>
 		<java.version>17</java.version>
 	</properties>
@@ -59,7 +59,6 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
-			
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-resources-plugin</artifactId>
